Fixed extra space below image!

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -71,6 +71,7 @@ html, body {
 }
 
 #LabelViewImg {
+  display: block;
   cursor: crosshair;
   position: relative;
   width: 100%;
